--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "Discrete event simulation with TypeScript",
     "license": "MIT",
     "type": "module",
-    "main": "bin/index.js",
-    "types": "dts/index.d.ts",
+    "main": "bin/main/index.js",
+    "types": "dts/main/index.d.ts",
     "author": {
         "name": "Georg Hackenberg",
         "email": "georg.hackenberg@fh-wels.at",
@@ -33,15 +33,11 @@
     "scripts": {
         "clean": "rimraf bin && rimraf dts",
         "build": "tsc",
-        "test": "",
+        "test": "npm run clean && npm run build && node bin/test/simple.js",
         "deploy": "npm run clean && npm run build && npm publish"
-    },
-    "dependencies": {
-
     },
     "devDependencies": {
         "rimraf": "^4.1.2",
-        "ts-node": "^10.9.1",
         "typescript": "^4.9.5"
     }
 }
