--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "target": "ES2015",
         "rootDir": "src",
         "outDir": "bin",
         "declaration": true,
