--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
         "deploy": "npm run clean && npm run build && npm publish"
     },
     "devDependencies": {
+        "@types/p5": "^1.5.0",
         "rimraf": "^4.1.2",
         "typescript": "^4.9.5"
+    },
+    "dependencies": {
+        "p5": "^1.5.0"
     }
 }
