--- a/package.json
+++ b/package.json
@@ -32,22 +32,22 @@
     },
     "scripts": {
         "clean": "rimraf bin && rimraf dts",
-        "build": "tsc && webpack",
+        "build": "tsc",
+        "watch": "webpack --watch --mode=development",
         "test": "npm run clean && npm run build && npm run test-all",
         "test-all": "npm run test-simple && npm run test-expression",
-        "test-simple": "node bin/test/simple.js",
+        "test-simple": "node bin/test/headless.js",
         "test-expression": "node bin/test/expression.js",
         "deploy": "npm run clean && npm run build && npm publish"
     },
     "devDependencies": {
-        "@types/node": "^18.13.0",
         "@types/three": "^0.149.0",
+        "html-webpack-plugin": "^5.5.0",
         "rimraf": "^4.1.2",
         "ts-loader": "^9.4.2",
         "typescript": "^4.9.5",
         "webpack": "^5.75.0",
-        "webpack-cli": "^5.0.1",
-        "webpack-dev-server": "^4.11.1"
+        "webpack-cli": "^5.0.1"
     },
     "dependencies": {
         "three": "^0.149.0"
